--- a/miniprogram/pages/tip/index.wxml
+++ b/miniprogram/pages/tip/index.wxml
@@ -1,13 +1,17 @@
 <view class="body">
-  <view class="section">
-    <view class="title">请输入</view> <textarea style="height:100rpx" class="input" name="info" placeholder="{{info}}" bindinput="bindKeyInput" value="{{inputValue}}" />
+  <button formType="reset" bindtap="clearChatList">重置对话</button>
+  <view class="chat-wrapper">
+    <scroll-view scroll-y="true" class="chat-list" scroll-into-view="{{toView}}" style="padding-bottom: 100rpx;">
+      <block wx:for="{{chatList}}" wx:key="index">
+        <view class="chat-item" id="msg-{{index}}">
+  <view class="chat-content {{item.isAI ? 'ai' : 'user'}}">{{item.content}}</view>
+</view>
+      </block>
+    </scroll-view>
+    <view class="btn">
+      <textarea style="height:100rpx" class="input" name="info" placeholder="{{info}}" bindinput="bindKeyInput" value="{{inputValue}}" />
+      <button style="margin: 30rpx 0" type="primary" formType="submit" bindtap="sendMessage">发送</button>
+     
+    </view>
   </view>
-  <view class="area"> <button style="margin: 30rpx 0" type="primary" formType="submit" bindtap="sendMessage">发送</button> <button style="margin: 30rpx 0" formType="reset" bindtap="clearChatList">清空聊天记录</button> </view>
-  <scroll-view scroll-y="true" class="chat-list" scroll-into-view="{{toView}}">
-    <block wx:for="{{chatList}}" wx:key="index">
-      <view class="chat-item" id="msg-{{index}}">
-        <view class="chat-content {{item.isAI ? 'ai' : 'user'}}">{{item.content}}</view>
-      </view>
-    </block>
-  </scroll-view>
 </view>
