--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,4 +1,6 @@
 <view class="body">
+  <preset wx:if="{{hasPreset}}" />
+  <button type="button"  class="green-button"     bindtap="showDemo">对话示范</button>
   <button formType="reset" bindtap="clearChatList">重置对话</button>
   <view class="chat-wrapper">
     <scroll-view scroll-y="true" class="chat-list" scroll-into-view="{{toView}}" style="padding-bottom: 100rpx;">
@@ -10,7 +12,7 @@
     </scroll-view>
   </view>
   <view class="btn">
-  <textarea class="input" placeholder="{{info}}" value="{{inputValue}}" bindinput="bindKeyInput" maxlength="1500" rows="4" cols="40"></textarea>
-  <button size="mini" type="primary" formType="submit" bindtap="sendMessage">发送</button>
-</view>
+    <textarea class="input" placeholder="{{info}}" value="{{inputValue}}" bindinput="bindKeyInput" maxlength="1500" rows="4" cols="40"></textarea>
+    <button size="mini" type="primary" formType="submit" bindtap="sendMessage">发送</button>
+  </view>
 </view>
