--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,18 +1,14 @@
-<view class="body">
-  <preset wx:if="{{hasPreset}}" />
-  <button type="button"  class="green-button"     bindtap="showDemo">对话示范</button>
-  <button formType="reset" bindtap="clearChatList">重置对话</button>
-  <view class="chat-wrapper">
-    <scroll-view scroll-y="true" class="chat-list" scroll-into-view="{{toView}}" style="padding-bottom: 100rpx;">
-      <block wx:for="{{chatList}}" wx:key="index">
-        <view class="chat-item" id="msg-{{index}}">
-          <view class="chat-content {{item.isAI ? 'ai' : 'user'}} {{item.isAI ? 'ai-content' : 'user-content'}}" data-content="{{item.content}}" bind:longpress="onCopyContent">{{item.content}}</view>
-        </view>
-      </block>
-    </scroll-view>
+<view class='cover'>
+  <image src="../../images/logo.png" class='logo'/>
+</view>
+<view class='title'>嗨，我是广小海</view>
+<view class='desc'>这里是小程序1.3.0版本</view>
+<view class="choose">
+  <navigator class="join" url="/pages/tip/index" >开始聊天</navigator>
+  <navigator class="join" url="/pages/group/index" bindtap="onSignIn" >签到</navigator>
+  <navigator class="join" url="/pages/form/index" bindtap="gotoChat">关于我们</navigator>
+  <view animation="{{scaleAnimation}}">
+    <button bindtap="onTapButton" style="{{buttonStyle}}">聊起来：{{power}}</button>
   </view>
-  <view class="btn">
-    <textarea class="input" placeholder="{{info}}" value="{{inputValue}}" bindinput="bindKeyInput" maxlength="1500" rows="4" cols="40"></textarea>
-    <button size="mini" type="primary" formType="submit" bindtap="sendMessage">发送</button>
-  </view>
+  <view class="daily-sentence">{{dailySentence}}</view>
 </view>
