--- a/miniprogram/pages/tip/index.wxml
+++ b/miniprogram/pages/tip/index.wxml
@@ -1,7 +1,9 @@
 <view class="body">
   <preset wx:if="{{hasPreset}}" />
-  <button type="button"  class="green-button"     bindtap="showDemo">对话示范</button>
-  <button formType="reset" bindtap="clearChatList">重置对话</button>
+  <div class="button-container">
+  <button type="button" class="black-button small-btn" bindtap="showDemo">对话示范</button>
+  <button formType="reset" class="black-button small-btn" bindtap="clearChatList">重置对话</button>
+</div>
   <view class="chat-wrapper">
     <scroll-view scroll-y="true" class="chat-list" scroll-into-view="{{toView}}" style="padding-bottom: 100rpx;">
       <block wx:for="{{chatList}}" wx:key="index">
