--- a/miniprogram/pages/tip/index.wxss
+++ b/miniprogram/pages/tip/index.wxss
@@ -34,7 +34,6 @@
   margin-bottom: 20rpx;
 }
 
-
 .chat-wrapper {
   position: relative;
   height: 100%;
@@ -47,7 +46,6 @@
 .chat-item {
   margin: 20rpx;
 }
-
 
 .chat-wrapper {
   position: relative;
@@ -77,7 +75,7 @@
 }
 
 .chat-content.user::before {
-  content: '';
+  content: "";
   display: block;
   position: absolute;
   top: 0;
@@ -88,7 +86,6 @@
   opacity: 0.5;
   z-index: -1;
 }
-
 
 .chat-content.ai {
   background-color: #f2f2f2;
@@ -106,8 +103,6 @@
   margin: 0 20rpx;
 }
 
-
-
 .area button {
   font-size: 28rpx;
   padding: 10rpx 20rpx;
@@ -117,7 +112,6 @@
   margin: 0 auto;
   display: block;
 }
-
 
 .btn {
   width: 90%;
@@ -133,7 +127,7 @@
 .btn button {
   width: 25%;
   height: 50px;
-  height:60%;
+  height: 60%;
   font-size: 20rpx;
   padding: 10rpx 10rpx;
   border-radius: 10rpx;
@@ -153,7 +147,7 @@
   gap: 50rpx;
 }
 .btn-green {
-  background-color: #00CD00;
+  background-color: #00cd00;
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -179,11 +173,18 @@
   background-color: #f2f2f2;
   font-size: 16px;
 }
-.green-button {
-  background-color: #1AAD19; /* 绿色背景 */
-  color: #FFFFFF; /* 白色文字 */
+.black-button {
+  color: #000000; /* 黑色文字 */
   border: none; /* 去除边框 */
   border-radius: 4px; /* 圆角 */
   padding: 10px 20px; /* 内边距 */
   font-size: 16px; /* 字体大小 */
+}
+.black-button.small-btn {
+  font-size: 14px; /* 按钮文字大小 */
+  padding: 5px 10px; /* 按钮内边距 */
+}
+.button-container {
+  display: flex;
+  justify-content: space-between;
 }
